slide/src/test/ui/error/expected_close_bracket.slide
===in
1 + [2 * 3) - 5
===in

~~~stdout
~~~stdout

~~~stderr
error[P0003]: Mismatched closing delimiter ``)``
  |
1 | 1 + [2 * 3) - 5 
  |           ^ expected closing `]`
  |           - help: change the delimiter: `]`
  |     - note: opening `[` here
  |
~~~stderr

~~~exitcode
1
~~~exitcode
